@@ -1,3 +1,13 @@
+May 14, 2012
+============
+[CHANGED] Add experience collection to tab view for highlighting (footer.php, experiences.js, experiences.scss)
+
+
+May 12, 2012
+============
+[ADDED] Caption support for Residence galleries.
+        (footer.php, fixtures/residences.js, experience.js, CSS)
+
 May 11, 2012
 ============
 [ADDED] Fixtures folder for Gallery JavaScript galleries
